simplified compulsory fields checking

--- a/submit/index.html
+++ b/submit/index.html
@@ -41,7 +41,7 @@
                 </div>
                 <button class="next btn btn-default">Next</button>
             </div>
-            <div class="page" id="2" style="visibility: hidden; display: none">
+            <div class="page" id="2" style="display: none">
                 <h2>Section 1: general</h2>
                 <p class="text-danger">* Compulsory</p>
                 <div class="well">
@@ -66,7 +66,7 @@
                 <button class="previous btn btn-default">Previous</button>
                 <button class="next btn btn-default">Next</button>
             </div>
-            <div class="page" id="3" style="visibility: hidden; display: none">
+            <div class="page" id="3" style="display: none">
                 <h2>Section 2: teaching
                     <small>This section covers the educational activities of your unit.</small>
                 </h2>
@@ -130,7 +130,7 @@
                 <button class="previous btn btn-default">Previous</button>
                 <button class="next btn btn-default">Next</button>
             </div>
-            <div class="page" id="4" style="visibility: hidden; display: none">
+            <div class="page" id="4" style="display: none">
                 <h2>Section 3: research
                     <small>This section covers research and publication activities of your unit.</small>
                 </h2>
@@ -155,7 +155,7 @@
                 <button class="previous btn btn-default">Previous</button>
                 <button class="next btn btn-default">Next</button>
             </div>
-            <div class="page" id="5" style="visibility: hidden; display: none">
+            <div class="page" id="5" style="display: none">
                 <h2>Section 4: technology transfer
                     <small>This section covers patents, licenses and other technology transfer activities</small>
                 </h2>
@@ -170,7 +170,7 @@
                 <button class="previous btn btn-default">Previous</button>
                 <button class="next btn btn-default">Next</button>
             </div>
-            <div class="page" id="6" style="visibility: hidden; display: none">
+            <div class="page" id="6" style="display: none">
                 <h2>Section 5: distinctions
                     <small>This section covers honors received by the unit's members.</small>
                 </h2>
@@ -188,7 +188,7 @@
                 <button class="previous btn btn-default">Previous</button>
                 <button class="next btn btn-default">Next</button>
             </div>
-            <div class="page" id="7" style="visibility: hidden; display: none">
+            <div class="page" id="7" style="display: none">
                 <h2>Section 7: other information
                     <small>This section covers anything not included in previous sections.</small>
                 </h2>
