--- a/submit/index.html
+++ b/submit/index.html
@@ -8,7 +8,7 @@
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.0/jquery.min.js"></script>
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
         <script type="text/javascript" src="scripts/pageSwitcher.js"></script>
-        <script type="text/javascript" src="scripts/compulsoryFieldsChecker.js"></script>
+        <script type="text/javascript" src="../scripts/compulsoryFieldsChecker.js"></script>
         <script type="text/javascript" src="scripts/connectedFieldsChecker.js"></script>
         <script type="text/javascript" src="scripts/rowManager.js"></script>
         <script type="text/javascript" src="scripts/tableRowNameSetter.js"></script>
@@ -23,7 +23,8 @@
             }
         </style>
     </head>
-    <nav class="navbar navbar-default">
+    <body>
+        <nav class="navbar navbar-default">
         <div class="container-fluid">
             <!-- Brand and toggle get grouped for better mobile display -->
             <div class="navbar-header">
