added testing to administration application

--- a/admin/index.html
+++ b/admin/index.html
@@ -9,25 +9,9 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     <script type="text/javascript" src="scripts/queryFormChanger.js"></script>
     <script type="text/javascript" src="../scripts/compulsoryFieldsChecker.js"></script>
+    <script type="text/javascript" src="../scripts/testing.js"></script>
     <script type="text/javascript" src="scripts/submitFieldsChecker.js"></script>
     <style>
-        /*.table-borderless > tbody > tr > td,
-        .table-borderless > tbody > tr > th,
-        .table-borderless > tfoot > tr > td,
-        .table-borderless > tfoot > tr > th,
-        .table-borderless > thead > tr > td,
-        .table-borderless > thead > tr > th {
-            border: none;
-        }
-        .form-group {
-            //width: 200px;
-            margin-right: auto;
-            margin-left: auto;
-        }
-        .querySelectForm {
-            //width: 450px;
-            margin-bottom: 30px;
-        }*/
         form {
             margin-bottom: 30px;
         }
