--- a/submit/index.html
+++ b/submit/index.html
@@ -13,7 +13,7 @@
         <script type="text/javascript" src="scripts/rowManager.js"></script>
         <script type="text/javascript" src="scripts/tableRowNameSetter.js"></script>
         <script type="text/javascript" src="scripts/buttonManager.js"></script>
-        <script type="text/javascript" src="scripts/testing.js"></script>
+        <script type="text/javascript" src="../scripts/testing.js"></script>
         <style>
             .date {
                 width: 200px;
