added date start and end check

--- a/admin/index.html
+++ b/admin/index.html
@@ -10,7 +10,7 @@
     <script type="text/javascript" src="scripts/queryFormChanger.js"></script>
     <script type="text/javascript" src="../scripts/compulsoryFieldsChecker.js"></script>
     <script type="text/javascript" src="../scripts/testing.js"></script>
-    <script type="text/javascript" src="scripts/submitFieldsChecker.js"></script>
+    <script type="text/javascript" src="../scripts/submitFieldsChecker.js"></script>
     <style>
         form {
             margin-bottom: 30px;
