--- a/submit/index.html
+++ b/submit/index.html
@@ -14,6 +14,8 @@
         <script type="text/javascript" src="scripts/tableRowNameSetter.js"></script>
         <script type="text/javascript" src="scripts/buttonManager.js"></script>
         <script type="text/javascript" src="../scripts/testing.js"></script>
+        <script type="text/javascript" src="../scripts/submitFieldsChecker.js"></script>
+        <script type="text/javascript" src="scripts/dateChecker.js"></script>
         <style>
             .date {
                 width: 200px;
@@ -60,13 +62,13 @@
                         <div class="form-group">
                             <input name="head-name" class="compulsoryField form-control" type="text">
                         </div>
-                        <h3>Start of reporting period <small>(if other than 1.1.2016)</small></h3>
-                        <div class="form-group connectedField">
-                            <input name="reporting-period-start" type="date" class="form-control date">
+                        <h3>Start of reporting period</h3>
+                        <div class="form-group">
+                            <input name="reporting-period-start" type="date" class="form-control date start-date compulsoryField" value="2016-01-01">
                         </div>
-                        <h3>End of reporting period <small>(if other than 31.12.2016)</small></h3>
-                        <div class="form-group connectedField">
-                            <input name="reporting-period-end" type="date" class="form-control date">
+                        <h3>End of reporting period</h3>
+                        <div class="form-group">
+                            <input name="reporting-period-end" type="date" class="form-control date end-date compulsoryField" value="2016-12-31">
                         </div>
                     </div>
                     <button type="button" class="previous btn btn-default">Previous</button>
@@ -316,12 +318,12 @@
                                 </td>
                                 <td>
                                     <div class="form-group">
-                                        <input name="period-start-1" class="form-control date compulsoryField" type="date">
+                                        <input name="period-start-1" class="form-control date compulsoryField start-date" type="date">
                                     </div>
                                 </td>
                                 <td>
                                     <div class="form-group">
-                                        <input name="period-end-1" class="form-control date compulsoryField" type="date">
+                                        <input name="period-end-1" class="form-control date compulsoryField end-date" type="date">
                                     </div>
                                 </td>
                                 <td>
@@ -589,8 +591,10 @@
                         </table>
                     </div>
                     <button type="button" class="previous btn btn-default">Previous</button>
-                    <button type="button" class="next btn btn-default">Next</button>
+                    <!--<button type="button" class="next btn btn-default">Next</button>-->
+                    <input type="submit" class="btn btn-success submit" value="Submit">
                 </div>
+                <!--
                 <div class="page" id="5" style="display: none">
                     <h2>Section 4: technology transfer
                         <small>This section covers patents, licenses and other technology transfer activities</small>
@@ -797,7 +801,7 @@
                     <button type="button" class="next btn btn-default">Next</button>
                 </div>
                 <div class="page" id="7" style="display: none">
-                <h2>Section 7: other information
+                <h2>Section 6: other information
                     <small>This section covers anything not included in previous sections.</small>
                 </h2>
                 <div class="well">
@@ -807,7 +811,7 @@
                 </div>
                 <button type="button" class="previous btn btn-default">Previous</button>
                 <input type="submit" class="btn btn-success" value="Submit">
-            </div>
+            </div>-->
             </div>
         </form>
     </body>
