fixed submit check

--- a/submit/index.html
+++ b/submit/index.html
@@ -18,7 +18,7 @@
         <script type="text/javascript" src="scripts/dateChecker.js"></script>
         <style>
             .date {
-                width: 200px;
+                //width: 200px;
             }
             .page {
                 margin-bottom: 100px;
@@ -62,11 +62,11 @@
                         <div class="form-group">
                             <input name="head-name" class="compulsoryField form-control" type="text">
                         </div>
-                        <h3>Start of reporting period</h3>
+                        <h3>Start of reporting period *</h3>
                         <div class="form-group">
                             <input name="reporting-period-start" type="date" class="form-control date start-date compulsoryField" value="2016-01-01">
                         </div>
-                        <h3>End of reporting period</h3>
+                        <h3>End of reporting period *</h3>
                         <div class="form-group">
                             <input name="reporting-period-end" type="date" class="form-control date end-date compulsoryField" value="2016-12-31">
                         </div>
@@ -413,12 +413,12 @@
                                 </td>
                                 <td>
                                     <div class="form-group">
-                                        <input name="research-projects-start-date-1" class="form-control compulsoryField" type="date">
+                                        <input name="research-projects-start-date-1" class="form-control compulsoryField start-date" type="date">
                                     </div>
                                 </td>
                                 <td>
                                     <div class="form-group">
-                                        <input name="research-projects-end-date-1" class="form-control compulsoryField" type="date">
+                                        <input name="research-projects-end-date-1" class="form-control compulsoryField end-date" type="date">
                                     </div>
                                 </td>
                                 <td>
