added int floor in fields with type number

--- a/submit/index.html
+++ b/submit/index.html
@@ -13,6 +13,7 @@
         <script type="text/javascript" src="scripts/rowManager.js"></script>
         <script type="text/javascript" src="scripts/tableRowNameSetter.js"></script>
         <script type="text/javascript" src="scripts/buttonManager.js"></script>
+        <script type="text/javascript" src="scripts/intFloorer.js"></script>
         <script type="text/javascript" src="../scripts/testing.js"></script>
         <script type="text/javascript" src="../scripts/submitFieldsChecker.js"></script>
         <script type="text/javascript" src="../scripts/dateChecker.js"></script>
@@ -120,7 +121,7 @@
                                 </td>
                                 <td>
                                     <div class="form-group">
-                                        <input name="courses-students-number-1" class="compulsoryField form-control" type="number">
+                                        <input name="courses-students-number-1" class="compulsoryField form-control int" type="number">
                                     </div>
                                 </td>
                                 <td>
@@ -170,7 +171,7 @@
                                 </td>
                                 <td>
                                     <div class="form-group">
-                                        <input name="examinations-students-number-1" class="compulsoryField form-control" type="number">
+                                        <input name="examinations-students-number-1" class="compulsoryField form-control int" type="number">
                                     </div>
                                 </td>
                                 <td>
@@ -333,7 +334,7 @@
                                 </td>
                                 <td>
                                     <div class="form-group">
-                                        <input name="grants-amount-1" class="form-control compulsoryField" type="number">
+                                        <input name="grants-amount-1" class="form-control compulsoryField int" type="number">
                                     </div>
                                 </td>
                                 <td>
