--- a/submit/index.html
+++ b/submit/index.html
@@ -400,7 +400,7 @@
                                             <tr>
                                                 <td>
                                                     <div class="form-group">
-                                                        <input name="research-projects-extra-personnel-involved-name-1-1" class="form-control connectedField" type="text">
+                                                        <input name="research-projects-extra-personnel-involved-name-1-1" class="form-control" type="text">
                                                     </div>
                                                 </td>
                                                 <td>
