added dates to publications

--- a/submit/index.html
+++ b/submit/index.html
@@ -501,6 +501,7 @@
                                 <th>#</th>
                                 <th>Title</th>
                                 <th>Authors</th>
+                                <th>Date of publication</th>
                                 <th></th>
                             </tr>
                             </thead>
@@ -535,6 +536,11 @@
                                     </table>
                                 </td>
                                 <td>
+                                    <div class="form-group">
+                                        <input name="conference-publications-date-1" class="form-control connectedField" type="date">
+                                    </div>
+                                </td>
+                                <td>
                                     <button class="add btn btn-default">Add more</button>
                                     <button class="delete btn btn-danger" style="display: none">Delete</button>
                                 </td>
@@ -549,6 +555,7 @@
                                 <th>#</th>
                                 <th>Title</th>
                                 <th>Authors</th>
+                                <th>Date of publication</th>
                                 <th></th>
                             </tr>
                             </thead>
@@ -581,6 +588,11 @@
                                             </td>
                                         </tbody>
                                     </table>
+                                </td>
+                                <td>
+                                    <div class="form-group">
+                                        <input name="journal-publications-date-1" class="form-control connectedField" type="date">
+                                    </div>
                                 </td>
                                 <td>
                                     <button class="add btn btn-default">Add more</button>
