added dates to courses

--- a/admin/index.html
+++ b/admin/index.html
@@ -53,29 +53,29 @@
             </div>
         </form>
         <div class="center-block">
-            <form action="submit" method="post" class="form-horizontal query1">
+            <form class="form-horizontal query1">
                 <div class="form-group">
                     <label class="col-sm-5 control-label">Year</label>
                     <div class="col-sm-2">
                         <input name="query1-year" class="compulsoryField form-control" type="number" value="2016">
                     </div>
                     <div class="col-sm-1">
-                        <input type="submit" class="btn btn-success center-block" value="Submit">
+                        <input type="button" class="btn btn-success center-block get" value="Submit">
                     </div>
                 </div>
             </form>
-            <form action="submit" method="post" class="form-horizontal query2" style="display: none">
+            <form class="form-horizontal query2" style="display: none">
                 <div class="form-group">
                     <label class="col-sm-4 control-label">Unit name</label>
                     <div class="col-sm-4">
                         <input name="query2-unit-name" class="compulsoryField form-control" type="text">
                     </div>
                     <div class="col-sm-1">
-                        <input type="submit" class="btn btn-success center-block" value="Submit">
+                        <input type="button" class="btn btn-success center-block get" value="Submit">
                     </div>
                 </div>
             </form>
-            <form action="submit" method="post" class="form-horizontal query3" style="display: none">
+            <form class="form-horizontal query3" style="display: none">
                     <div class="form-group">
                         <label class="col-sm-3 control-label">Laboratory name</label>
                         <div class="col-sm-3">
@@ -92,15 +92,15 @@
                         <input name="query2-final-date" class="compulsoryField form-control end-date" type="date">
                     </div>
                     </div>
-                <input type="submit" class="btn btn-success center-block" value="Submit">
+                <input type="button" class="btn btn-success center-block get" value="Submit">
             </form>
-            <form action="submit" method="post" class="query4" style="display: none">
-                <input type="submit" class="btn btn-success center-block" value="Submit"/>
+            <form class="query4" style="display: none">
+                <input type="button" class="btn btn-success center-block get" value="Submit"/>
             </form>
-            <form action="submit" method="post" class="query5" style="display: none">
-                <input type="submit" class="btn btn-success center-block" value="Submit"/>
+            <form class="query5" style="display: none">
+                <input type="button" class="btn btn-success center-block get" value="Submit"/>
             </form>
-            <form action="submit" method="post" class="form-horizontal query6" style="display: none">
+            <form class="form-horizontal query6" style="display: none">
                 <div class="form-group">
                     <label class="col-sm-3 control-label">Initial date</label>
                     <div class="col-sm-2">
@@ -111,18 +111,18 @@
                         <input name="query2-final-date" class="compulsoryField form-control end-date" type="date">
                     </div>
                     <div class="col-sm-1">
-                        <input type="submit" class="btn btn-success center-block" value="Submit">
+                        <input type="button" class="btn btn-success center-block get" value="Submit">
                     </div>
                 </div>
             </form>
-            <form action="submit" method="post" class="form-horizontal query7" style="display: none">
+            <form class="form-horizontal query7" style="display: none">
             <div class="form-group">
                 <label class="col-sm-4 control-label">Laboratory name</label>
                 <div  class="col-sm-4">
                     <input name="query2-laboratory-name" class="compulsoryField form-control" type="text">
                 </div>
                 <div  class="col-sm-1">
-                    <input type="submit" class="btn btn-success center-block" value="Submit">
+                    <input type="button" class="btn btn-success center-block get" value="Submit">
                 </div>
             </div>
         </form>
