--- a/submit/index.html
+++ b/submit/index.html
@@ -91,6 +91,7 @@
                                 <th>Semester</th>
                                 <th>Level</th>
                                 <th>Approximate number of students</th>
+                                <th>Dates</th>
                                 <th></th>
                             </tr>
                             </thead>
@@ -122,6 +123,16 @@
                                 <td>
                                     <div class="form-group">
                                         <input name="courses-students-number-1" class="compulsoryField form-control int" type="number">
+                                    </div>
+                                </td>
+                                <td>
+                                    <div class="form-group">
+                                        <label>Date of start</label>
+                                        <input name="courses-start-date-1" class="form-control compulsoryField start-date" type="date">
+                                    </div>
+                                    <div class="form-group">
+                                        <label>Expected date of end</label>
+                                        <input name="courses-end-date-1" class="form-control compulsoryField end-date" type="date">
                                     </div>
                                 </td>
                                 <td>
