--- a/admin/index.html
+++ b/admin/index.html
@@ -8,6 +8,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.0/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     <script type="text/javascript" src="scripts/queryFormChanger.js"></script>
+    <script type="text/javascript" src="scripts/queryGetter.js"></script>
     <script type="text/javascript" src="../scripts/compulsoryFieldsChecker.js"></script>
     <script type="text/javascript" src="../scripts/connectedFieldsChecker.js"></script>
     <script type="text/javascript" src="../scripts/dateChecker.js"></script>
