--- a/admin/index.html
+++ b/admin/index.html
@@ -64,6 +64,7 @@
                         <input type="button" class="btn btn-success center-block get" value="Submit">
                     </div>
                 </div>
+                <div class='well' style="display: none"></div>
             </form>
             <form class="form-horizontal query2" style="display: none">
                 <div class="form-group">
@@ -75,6 +76,7 @@
                         <input type="button" class="btn btn-success center-block get" value="Submit">
                     </div>
                 </div>
+                <div class='well' style="display: none"></div>
             </form>
             <form class="form-horizontal query3" style="display: none">
                     <div class="form-group">
@@ -115,6 +117,7 @@
                         <input type="button" class="btn btn-success center-block get" value="Submit">
                     </div>
                 </div>
+                <div class='well' style="display: none"></div>
             </form>
             <form class="form-horizontal query7" style="display: none">
             <div class="form-group">
