--- a/submit/index.html
+++ b/submit/index.html
@@ -137,7 +137,7 @@
                                 </td>
                                 <td>
                                     <button class="add btn btn-default">Add more</button>
-                                    <button class="delete btn btn-danger" style="display: none">Delete</button>
+                                    <button class="delete btn btn-danger" style="display: none">X</button>
                                 </td>
                             </tr>
                             </tbody>
@@ -187,7 +187,7 @@
                                 </td>
                                 <td>
                                     <button class="add btn btn-default">Add more</button>
-                                    <button class="delete btn btn-danger" style="display: none">Delete</button>
+                                    <button class="delete btn btn-danger" style="display: none">X</button>
                                 </td>
                             </tr>
                             </tbody>
@@ -216,7 +216,7 @@
                                 </td>
                                 <td>
                                     <button class="add btn btn-default">Add more</button>
-                                    <button class="delete btn btn-danger" style="display: none">Delete</button>
+                                    <button class="delete btn btn-danger" style="display: none">X</button>
                                 </td>
                             </tr>
                             </tbody>
@@ -251,7 +251,7 @@
                                 </td>
                                 <td>
                                     <button class="add btn btn-default">Add more</button>
-                                    <button class="delete btn btn-danger" style="display: none">Delete</button>
+                                    <button class="delete btn btn-danger" style="display: none">X</button>
                                 </td>
                             </tr>
                             </tbody>
@@ -286,7 +286,7 @@
                                 </td>
                                 <td>
                                     <button class="add btn btn-default">Add more</button>
-                                    <button class="delete btn btn-danger" style="display: none">Delete</button>
+                                    <button class="delete btn btn-danger" style="display: none">X</button>
                                 </td>
                             </tr>
                             </tbody>
@@ -350,7 +350,7 @@
                                 </td>
                                 <td>
                                     <button class="add btn btn-default">Add more</button>
-                                    <button class="delete btn btn-danger" style="display: none">Delete</button>
+                                    <button class="delete btn btn-danger" style="display: none">X</button>
                                 </td>
                             </tr>
                             </tbody>
@@ -394,7 +394,7 @@
                                                 </td>
                                                 <td>
                                                     <button class="add btn btn-default">Add more</button>
-                                                    <button class="delete btn btn-danger" style="display: none">Delete</button>
+                                                    <button class="delete btn btn-danger" style="display: none">X</button>
                                                 </td>
                                             </tbody>
                                         </table>
@@ -416,7 +416,7 @@
                                                 </td>
                                                 <td>
                                                     <button class="add btn btn-default">Add more</button>
-                                                    <button class="delete btn btn-danger" style="display: none">Delete</button>
+                                                    <button class="delete btn btn-danger" style="display: none">X</button>
                                                 </td>
                                             </tr>
                                             </tbody>
@@ -439,7 +439,7 @@
                                 </td>
                                 <td>
                                     <button class="add btn btn-default">Add more</button>
-                                    <button class="delete btn btn-danger" style="display: none">Delete</button>
+                                    <button class="delete btn btn-danger" style="display: none">X</button>
                                 </td>
                             </tr>
                             </tbody>
@@ -487,7 +487,7 @@
                                             </td>
                                             <td>
                                                 <button class="add btn btn-default">Add more</button>
-                                                <button class="delete btn btn-danger" style="display: none">Delete</button>
+                                                <button class="delete btn btn-danger" style="display: none">X</button>
                                             </td>
                                         </tbody>
                                     </table>
@@ -499,7 +499,7 @@
                                 </td>
                                 <td>
                                     <button class="add btn btn-default">Add more</button>
-                                    <button class="delete btn btn-danger" style="display: none">Delete</button>
+                                    <button class="delete btn btn-danger" style="display: none">X</button>
                                 </td>
                             </tr>
                             </tbody>
@@ -541,7 +541,7 @@
                                             </td>
                                             <td>
                                                 <button class="add btn btn-default">Add more</button>
-                                                <button class="delete btn btn-danger" style="display: none">Delete</button>
+                                                <button class="delete btn btn-danger" style="display: none">X</button>
                                             </td>
                                         </tbody>
                                     </table>
@@ -553,7 +553,7 @@
                                 </td>
                                 <td>
                                     <button class="add btn btn-default">Add more</button>
-                                    <button class="delete btn btn-danger" style="display: none">Delete</button>
+                                    <button class="delete btn btn-danger" style="display: none">X</button>
                                 </td>
                             </tr>
                             </tbody>
@@ -595,7 +595,7 @@
                                             </td>
                                             <td>
                                                 <button class="add btn btn-default">Add more</button>
-                                                <button class="delete btn btn-danger" style="display: none">Delete</button>
+                                                <button class="delete btn btn-danger" style="display: none">X</button>
                                             </td>
                                         </tbody>
                                     </table>
@@ -607,7 +607,7 @@
                                 </td>
                                 <td>
                                     <button class="add btn btn-default">Add more</button>
-                                    <button class="delete btn btn-danger" style="display: none">Delete</button>
+                                    <button class="delete btn btn-danger" style="display: none">X</button>
                                 </td>
                             </tr>
                             </tbody>
@@ -647,7 +647,7 @@
                                 </td>
                                 <td>
                                     <button class="add btn btn-default">Add more</button>
-                                    <button class="delete btn btn-danger" style="display: none">Delete</button>
+                                    <button class="delete btn btn-danger" style="display: none">X</button>
                                 </td>
                             </tr>
                             </tbody>
@@ -670,7 +670,7 @@
                                 </td>
                                 <td>
                                     <button class="add btn btn-default">Add more</button>
-                                    <button class="delete btn btn-danger" style="display: none">Delete</button>
+                                    <button class="delete btn btn-danger" style="display: none">X</button>
                                 </td>
                             </tr>
                             </tbody>
@@ -722,7 +722,7 @@
                                             </td>
                                             <td>
                                                 <button class="add btn btn-default">Add more</button>
-                                                <button class="delete btn btn-danger" style="display: none">Delete</button>
+                                                <button class="delete btn btn-danger" style="display: none">X</button>
                                             </td>
                                         </tbody>
                                     </table>
@@ -744,7 +744,7 @@
                                 </td>
                                 <td>
                                     <button class="add btn btn-default">Add more</button>
-                                    <button class="delete btn btn-danger" style="display: none">Delete</button>
+                                    <button class="delete btn btn-danger" style="display: none">X</button>
                                 </td>
                             </tr>
                             </tbody>
@@ -773,7 +773,7 @@
                                 </td>
                                 <td>
                                     <button class="add btn btn-default">Add more</button>
-                                    <button class="delete btn btn-danger" style="display: none">Delete</button>
+                                    <button class="delete btn btn-danger" style="display: none">X</button>
                                 </td>
                             </tr>
                             </tbody>
@@ -814,7 +814,7 @@
                                 </td>
                                 <td>
                                     <button class="add btn btn-default">Add more</button>
-                                    <button class="delete btn btn-danger" style="display: none">Delete</button>
+                                    <button class="delete btn btn-danger" style="display: none">X</button>
                                 </td>
                             </tr>
                             </tbody>
